# Web_g2g

./: .gitignore  pyproject.toml  requirements.txt
web_resource_g2g/: G2G.sqlite  LICENSE  config.py  front_server.ans  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt  runserver.py
web_resource_g2g/internal_market/: apps.py  class_internal_order.py  crud.py  models.py  urls.py  views.py
web_resource_g2g/internal_market/migrations/: 0001_initial.py  0002_rename_seller_internalorder_internal_seller_and_more.py  0003_remove_internalorder_bought_by.py  0004_alter_internalorder_path_to_video_and_more.py
web_resource_g2g/main/: admin.py  calculate_commissions_crud.py  context_processors.py  crud.py  models.py  pause_delete_script.html  tests.py  tg_bot_run.py  urls.py  views.py
web_resource_g2g/main/migrations/: 0001_initial.py  0002_alter_offersforplacement_currency.py  0002_remove_commissionbreakdown_mentor_and_more.py  0002_rename_id_discord_sellers_id_telegram_and_more.py  0003_alter_offersforplacement_price.py  0003_alter_offersforplacement_table_and_more.py  0003_remove_sellers_renter_lvl1_and_more.py  0003_rename_offers_for_placement_offersforplacement_and_more.py  0004_alter_offersforplacement_table_and_more.py  0004_commissionbreakdown_charged_to_payment_commission_and_more.py  0004_sellers_id_auth_user.py  0005_alter_sellers_id_auth_user.py  0006_rename_id_auth_user_sellers_auth_user.py  (+27 more)
web_resource_g2g/users/: urls.py  views.py
web_resource_g2g/web_resource_g2g/: asgi.py  data_base_hosting_cred  settings.py  some_func.py  urls.py  wsgi.py
(+16 files in other folders)
